<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/pref_cat_general">
        <ListPreference
            app:defaultValue="system"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/pref_title_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_scan">
        <ListPreference
            app:defaultValue="ask"
            app:entries="@array/scan_mode_entries"
            app:entryValues="@array/scan_mode_values"
            app:key="default_scan_mode"
            app:title="@string/pref_title_default_scan_mode"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="parse"
            app:summaryOff="@string/pref_summary_parse_off"
            app:summaryOn="@string/pref_summary_parse_on"
            app:title="@string/pref_title_parse" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="auto_save_result"
            app:summaryOff="@string/pref_summary_auto_save_off"
            app:summaryOn="@string/pref_summary_auto_save_on"
            app:title="@string/pref_title_auto_save" />
        <EditTextPreference
            app:key="multi_scan_prefix"
            app:title="@string/pref_title_scan_prefix"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="multi_pic_prefix"
            app:title="@string/pref_title_pic_prefix"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="multi_code_prefix"
            app:title="@string/pref_title_code_prefix"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_generate">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="show_code_type_info"
            app:summaryOff="@string/pref_summary_show_code_info_off"
            app:summaryOn="@string/pref_summary_show_code_info_on"
            app:title="@string/pref_title_show_code_info" />
    </PreferenceCategory>

</PreferenceScreen>